# server-with-opencv

./: CMakeLists.txt  app.js  index.html  package.json  readme.md
src/: FaceDetector.cpp  FaceDetector.h  main.cpp
